# ffi-trait

./: Cargo.toml  README.md
ffi-trait-macro/: Cargo.toml
ffi-trait-macro/src/: lib.rs
src/: boxed.rs  lib.rs  ptr.rs  refs.rs
