[package]
name = "ffi-trait-macro"
version = "0.1.0"
authors = ["FireCubez <firecubeez@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1"
syn = {version = "1", features = ["full", "extra-traits", "clone-impls"]}